--- a/index.org
+++ b/index.org
@@ -111,7 +111,8 @@ Org has a [[file:guide/index.html][guide]], and a wealth of community-written do
 
 Nearly every Org user has a story to tell about how Org enables and empowers them ---
 some have found it so useful that they have written [[https://orgmode.org/worg/org-papers.html][(scientific) papers]] about
-the value of Org for conducting [[https://en.wikipedia.org/wiki/Reproducibility#Reproducible_research][reproducible research]].
+the value of Org for conducting [[https://en.wikipedia.org/wiki/Reproducibility#Reproducible_research][reproducible research]]. Some have produced
+third-part tools to enjoy Org outside of Emacs, such as mobile applications.
 
 * More Org
 :PROPERTIES:
