Add footer to pages, attribution + license

--- a/colophon.org
+++ b/colophon.org
@@ -97,25 +97,30 @@ Then we can execute some elisp.
  org-html-doctype "html5"
  org-html-html5-fancy t
  org-html-validation-link nil
+ org-html-postamble t
+ org-html-postamble-format
+ '(("en" "<p class=\"author\">Made with 🤎 by <a href=\"https://github.com/tecosaur/\">TEC</a></p>
+<p class=\"license\"><a href=\"https://creativecommons.org/licenses/by-sa/4.0/\"><img class=\"inline\" src=\"/resources/img/external/cc-by-sa.svg\" title=\"CC-BY-SA 4.0\" alt=\"CC-BY-SA\"/></a></p>"))
  make-backup-files nil
  debug-on-error t)
 
 (let ((scss-files (directory-files-recursively default-directory "\\.scss$"))
       (org-files (directory-files-recursively default-directory "\\.org$")))
   (if (executable-find "sassc")
-    (dolist (scss-file scss-files)
-      (let ((sassc-out
-             (shell-command-to-string
-              (format "sassc %s %s"
-                      scss-file (concat (file-name-sans-extension scss-file) ".css")))))
-        (message "\033[0;35m• %s%s\033[0m" (file-relative-name scss-file default-directory)
-                 (if (string= "" sassc-out) "" (concat ":\033[31m\n" sassc-out)))))
+      (dolist (scss-file scss-files)
+        (let ((sassc-out
+               (shell-command-to-string
+                (format "sassc %s %s"
+                        scss-file (concat (file-name-sans-extension scss-file) ".css")))))
+          (message "\033[0;35m• %s%s\033[0m" (file-relative-name scss-file default-directory)
+                   (if (string= "" sassc-out) "" (concat ":\033[31m\n" sassc-out)))))
     (message "No sassc executable found"))
   (dolist (org-file org-files)
     (message "\033[0;34m• %s\033[90m" (file-relative-name org-file default-directory))
     (with-current-buffer (find-file-literally org-file)
       (condition-case err
-          (org-html-export-to-html)
+          (progn (org-html-export-to-html)
+                 (htmlize-file org-file (concat org-file ".html")))
         (error (message "  \033[0;31m%s\033[90m"  (error-message-string err)))))))
 (message "\033[0m")
 (kill-emacs 0)
