Inline some styles which apply to a single element

--- a/colophon.org
+++ b/colophon.org
@@ -99,8 +99,8 @@ Then we can execute some elisp.
  org-html-validation-link nil
  org-html-postamble t
  org-html-postamble-format
- '(("en" "<p class=\"author\">Made with 🤎 by <a href=\"https://github.com/tecosaur/\">TEC</a></p>
-<p class=\"license\"><a href=\"https://creativecommons.org/licenses/by-sa/4.0/\"><img class=\"inline\" src=\"/resources/img/external/cc-by-sa.svg\" title=\"CC-BY-SA 4.0\" alt=\"CC-BY-SA\"/></a></p>"))
+ '(("en" "<p class=\"author\">Made with 🤎 by <a href=\"https://github.com/tecosaur/\" style=\"font-weight: bold; font-size: 0.9em; letter-spacing: 1px\">TEC</a></p>
+<p class=\"license\"><a href=\"https://creativecommons.org/licenses/by-sa/4.0/\"><img class=\"inline\" style=\"opacity: 0.4\" src=\"/resources/img/external/cc-by-sa.svg\" title=\"CC-BY-SA 4.0\" alt=\"CC-BY-SA\"/></a></p>"))
  make-backup-files nil
  debug-on-error t)
 
