--- a/Changes.org
+++ b/Changes.org
@@ -549,4 +549,4 @@ Hyatt has been fixed.  Thanks to both of them.
 
 * Older changes
 
-For older Changes, see [[file:changes-old.org][old changes]].
+For older Changes, see [[file:Changes_old.org][old changes]].
