--- a/Changes_old.org
+++ b/Changes_old.org
@@ -478,6 +478,7 @@ leave unfolded subtrees unfolded.
 I.e. treat the whole file as if it was a subtree.
 
 *** Respect narrowing when agenda command is restricted to buffer
+
 * Version 9.2
 ** Incompatible changes
 *** Removal of OrgStruct mode mode and radio lists
@@ -8745,4 +8746,4 @@ Org now contains a new freemind exporter, /org-freemind.el/.
 
 * Older changes
 
-For even older Changes, see [[file:changes-older.org][older changes]].
+For even older Changes, see [[file:Changes_older.org][older changes]].
