contribute.org: Tiny formatting fix

--- a/contribute.org
+++ b/contribute.org
@@ -18,7 +18,7 @@ support Org's primary maintainer Bastien Guerry.
 <a href="https://liberapay.com/bzg" title="Donations always help" style="color: #c7a416">
   <img class="inline" src="/resources/img/external/librepay.svg"/> Liberapay</a>,
 <a href="https://github.com/sponsors/bzg" title="Donations always help" style="color: #222">
-<img class="inline" src="/resources/img/external/github.svg"/> GitHub</a>, or
+<img class="inline" src="/resources/img/external/github.svg"/> GitHub</a> or
 <a href="https://www.paypal.com/paypalme/bzg/10" title="Donations always help" style="color: #253b80">
 <img class="inline" src="/resources/img/external/paypal.svg"/> PayPal</a></p>
 #+END_EXPORT
